September 30, 2019 - I'm Just Killing Time Until SIFAS Event Edition
----------------------------
- Final rank result now shows amount of EXP in that rank. Maybe you're close to another rank up?

September 29, 2019 - Are Your Calculators Connected? Edition
----------------------------
- Added link to the SIFAS calc
- Added link to GitHub
- Honestly I think I've outdone myself with the title for this entry but sadly nobody reads these

September 28, 2019 - Odd Ideas Edition
----------------------------
- Had an idea while working on the SIFAC calc so here it is: icon in the header

September 27, 2019 - The Colors Did Mess Up Indeed Edition
----------------------------
- Fixed the "Contact me" link below the event banner being too dark on dark mode
- Fixed colors on some elements like number inputs and tab indicator
- Fixed pop up dialogs not respecting dark mode
- Fixed max EXP calculation for ranks > 1000

September 25, 2019 - The Future Is Here Edition
----------------------------
- Removed AppCache, added Service Worker. What a garbage spec, but I'm glad it's done
- Right now it works just like the old AppCache, but might add more stuff in the future
- Anyways it's time for me to prepare the SIFAS calc, see you on the other side

September 23, 2019 - I Have To Cleanup Before Guests Arrive Edition
----------------------------
- Optional current LP/EXP inputs
- Fix: Dialogs and Popups don't blink on and off anymore if you click the close button multiple times
- Fix: Dialogs and Popups are now scrollable in case your screen is not tall enough, so you can reach the close buttons
- Javadoc'd UI code
- Only migrating from AppCache to Service Workers left before SIFAS event calc is started... oof

September 22, 2019 - SIFAS Is Coming Edition
----------------------------
- Wew it's been a while
- Added a whole bunch of promo exception to Otasuke Sorter because I missed a few in the last year
- Please give me a heads up if you find any incorrectly categorized cards