@@ -51,7 +51,7 @@
                         <small>Companion Match</small>
                     </a></li>
                     <li class="tab"><a target="_self" class="sidenav-trigger tab-sidebar-button" data-target="toolsbar">
-                        More Tools&nbsp;&nbsp;&nbsp;&#x25B6;</a></li>
+                        Tools&nbsp;&nbsp;&nbsp;&#x25B6;</a></li>
                     <li class="tab"><a href="/sifas/calc" target="_self">SIFAS Calc&nbsp;&nbsp;&nbsp;&#x25B6;</a></li>
                 </ul>
                 <a class="btn tab-button-left pink lighten-5"><i class="material-icons">keyboard_arrow_left</i></a>
@@ -100,7 +100,7 @@
                         <div class="background">
                             <img src="image/sidenav.jpg">
                         </div>
-                        <span class="name">More Tools</span>
+                        <span class="name">Tools</span>
                     </div>
                 </li>
                 <li><a target="_self" href="proedit.html" class="tooltipped" data-position="right" data-delay="0"
