@@ -1,3 +1,8 @@
+October 3, 2019 - Colorblind Edition
+----------------------------
+- Oh hey, the tools page exists
+- Fixed a whole bunch of color problems there
+
 September 30, 2019 - I'm Just Killing Time Until SIFAS Event Edition
 ----------------------------
 - Final rank result now shows amount of EXP in that rank. Maybe you're close to another rank up?
